# practice

./: .gitmodules  InterviewPrep.md  README.md
c/: .clang-format  .clang_complete  .gitignore  CMakeLists.txt  Makefile  README.md  a.cc  b.cc  c.cc  cf545d.cc  cf630g.cc  cf731c.cc  cf764a.cc  choosem.cc  comb.cc  d.cc  e.cc  f.cc  heap.cc  mconn.h  mconn_service.c  mconn_service.h  mconn_service_obuf.c  mconn_service_obuf.h  mconn_test.cc  paths.cpp  ringbuf.c  split.cc  tc.cc  tc_test.cc  treap.cc
c/acmp/: README.md  acmp1.cpp  acmp100.cpp  acmp1003.cpp  acmp101.cpp  acmp1010.cpp  acmp1011.cpp  acmp1014.cpp  acmp1018.cpp  acmp1029.cpp  acmp103.cpp  acmp1035.cpp  acmp1043.cpp  acmp1047.cpp  acmp1054.cpp  acmp106.cpp  acmp1072.cpp  acmp108.cpp  acmp1080.cpp  acmp1081.cpp  acmp1082.cpp  acmp1083.cpp  acmp1084.cpp  acmp1085.cpp  acmp109.cpp  acmp1098.cpp  acmp11.cpp  acmp112.cpp  acmp113.cpp  acmp114.cpp  acmp1149.cpp  acmp115.cpp  acmp1151.cpp  acmp1154.cpp  acmp1154.py  acmp1155.cpp  acmp1156.cpp  acmp1157.cpp  acmp1158.cpp  acmp1159.cpp  (+318 more)
c/alg/: .clang_complete  .gitignore  binomial.hh  binomial_test.cc  comb.cc  comb.hh  comb_test.cc  fenwick.hh  genilog.sh  heap.cc  heap.hh  heap_test.cc  ilog.c  ilog.h  ilog.hh  ilog_test.cc  mmerge.hh  par.cc  par.hh  par_test.cc  perm.hh  rsum.hh  segtree.hh  segtree_test.cc
c/alg.xcodeproj/: project.pbxproj
c/amazon/: 2020_phone.cc  2021_onsight_virt.txt
c/bloomberg/: 2020_phone.txt  2021_phone_1.txt  2021_phone_2.txt  2021_vos_1.txt  2021_vos_2.txt
c/cf/: 888c.cc  acmp384.cc  acmp441.cc  acmp448.cc  atpp819.cc  cf1003a.cc  cf1003b.cc  cf1003c.cc  cf1003d.cc  cf100579a.cc  cf1005a.c  cf1005b.c  cf1005c.c  cf1005e.cc  cf1006a.cc  cf1006b.cc  cf1006c.cc  cf1006d.cc  cf1006e.cc  cf1015a.cc  cf1015b.cc  cf1015c.cc  cf1015d.cc  cf1015e.cc  cf1025d.cc  cf1027a.cc  cf1027b.cc  cf1027c.cc  cf1028c.cc  cf1028d.cc  cf1029a.cc  cf1029b.cc  cf1029c.cc  cf1029d.cc  cf1036a.cc  cf1036b.cc  cf1037a.cc  cf1037b.cc  cf1037c.cc  cf1037d.cc  (+253 more)
c/cf.xcodeproj/: project.pbxproj
c/cr/: algorithms-on-strings-1.1.cc  algorithms-on-strings-1.2.cc  algorithms-on-strings-1.3.cc  algorithms-on-strings-2.1.cc  algorithms-on-strings-2.4.cc  algorithms-on-strings-3.1.cc  algorithms-on-strings-4.1.cc  algorithms-on-strings-4.2.cc
c/draft/: .clang_complete  4key.c  choose.cc  derangement.cc  div7.c  ideone.cc  ideone2.c  knapsack.cc  knapsack.hh  knapsack_test.cc  lcs.cc  lcs.hh  lcs_test.cc  mat.hh  matmul.cc  matmul.hh  matmul_test.cc  perm.cc  pi.c  safeseq.c  str.cc
c/draft.xcodeproj/: project.pbxproj
c/fb/: 2020_phone.cc  2021_onsite.txt  Queues:Queue_Removals.cc  Recursion:Change_in_a_Foreign_Currency.cc  Stacks:Balance_Brackets.cc  Trees:Nodes_in_a_Subtree.cc
c/hr/: hr_abstract_classes_polymorphism.cc  hr_balanced_forest.cc  hr_bitset_1.cc  hr_candies.cc  hr_common_child.cc  hr_cpp_variadics.cc  hr_crush.cc  hr_ctci_merge_sort.cc  hr_cube_summation.cc  hr_deque_stl.cc  (+46 more)
(+735 files in other folders)
